[gd_scene load_steps=8 format=4 uid="uid://cqn332lgijeib"]

[ext_resource type="Script" uid="uid://7f13pnxpnvqk" path="res://scenes/levels/stlevel.gd" id="1_338nh"]
[ext_resource type="Texture2D" uid="uid://dl7mpofby0tan" path="res://assets/art/tetrisbg/stbg.png" id="2_wx3r2"]
[ext_resource type="PackedScene" uid="uid://mq6606gte64w" path="res://scenes/juicy/juicy_bg.tscn" id="3_5gpg6"]
[ext_resource type="PackedScene" uid="uid://bdg1w8tj4de8v" path="res://scenes/level_tile_map_layer.tscn" id="4_njork"]
[ext_resource type="Script" uid="uid://dnn1gotw1q43v" path="res://tricks/TilemapCollisionBaker.gd" id="5_u81cr"]
[ext_resource type="FontFile" uid="uid://b8qhse0bp26te" path="res://assets/fonts/Roboto-VariableFont_wdth,wght.ttf" id="6_vq3mt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4w6o"]
size = Vector2(660, 221.5)

[node name="StLevel" type="Node2D"]
script = ExtResource("1_338nh")
left_bound = 101.0
right_bound = 305.0

[node name="SpawnMarker" type="Marker2D" parent="."]
position = Vector2(202, -30)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wx3r2")
centered = false
metadata/_edit_lock_ = true

[node name="JuicyBg" parent="." instance=ExtResource("3_5gpg6")]
visible = false

[node name="LevelTileMapLayer" parent="." instance=ExtResource("4_njork")]
tile_map_data = PackedByteArray("AAAMAAsAAQAAAAAAAAANAAsAAQAAAAAAAAAOAAsAAQAAAAAAAAANAAwAAQAAAAAAAAANAA0AAQAAAAAAAAANAA4AAQAAAAAAAAANAA8AAQAAAAAAAAANABAAAQAAAAAAAAAQAAsAAQABAAAAAAARAAsAAQABAAAAAAASAAsAAQABAAAAAAAQAA0AAQABAAAAAAAQAAwAAQABAAAAAAAQAA4AAQABAAAAAAAQAA8AAQABAAAAAAAQABAAAQABAAAAAAAUAAsAAQAAAAAAAAAVAAsAAQAAAAAAAAAWAAsAAQAAAAAAAAAVAAwAAQAAAAAAAAAVAA0AAQAAAAAAAAAVAA4AAQAAAAAAAAAVAA8AAQAAAAAAAAAVABAAAQAAAAAAAAAYAAwAAQABAAAAAAAYAA0AAQABAAAAAAAYAA4AAQABAAAAAAAYAA8AAQABAAAAAAAYABAAAQABAAAAAAAZAAsAAQABAAAAAAAaAAsAAQABAAAAAAAaAA8AAQABAAAAAAAaABAAAQABAAAAAAAdAAwAAQAAAAAAAAAdAA0AAQAAAAAAAAAdAA4AAQAAAAAAAAAdAA8AAQAAAAAAAAAdABAAAQAAAAAAAAAfAAsAAQABAAAAAAAgAAsAAQABAAAAAAAhAAsAAQABAAAAAAAfAAwAAQABAAAAAAAfAA0AAQABAAAAAAAfAA4AAQABAAAAAAAgAA4AAQABAAAAAAAhAA4AAQABAAAAAAAhAA8AAQABAAAAAAAhABAAAQABAAAAAAAXAAsAAQAAAAAAAAAPAAsAAQAAAAAAAAALAAsAAQAAAAAAAAAcAAsAAQAAAAAAAAAeAAsAAQAAAAAAAAAYAAsAAQABAAAAAAAZAA4AAQABAAAAAAAaAA4AAQABAAAAAAAbAA4AAQABAAAAAAAbAA0AAQABAAAAAAAbAAwAAQABAAAAAAAbAAsAAQABAAAAAAAYABEAAQABAAAAAAAbABEAAQABAAAAAAAdABEAAQAAAAAAAAAhABEAAQABAAAAAAAgABEAAQABAAAAAAAfABEAAQABAAAAAAAVABEAAQAAAAAAAAAQABEAAQABAAAAAAARABEAAQABAAAAAAASABEAAQABAAAAAAANABEAAQAAAAAAAAARAA4AAQABAAAAAAASAA4AAQABAAAAAAAaABEAAQABAAAAAAAiAAsAAQABAAAAAAAiAAAAAQABAAAAAAAiAAEAAQABAAAAAAAiAAIAAQABAAAAAAAiAAMAAQABAAAAAAAiAAQAAQABAAAAAAAiAAUAAQABAAAAAAAiAAYAAQABAAAAAAAiAAcAAQABAAAAAAAiAAgAAQABAAAAAAAiAAkAAQABAAAAAAAiAAoAAQABAAAAAAAiAAwAAQABAAAAAAAiAA0AAQABAAAAAAAiAA4AAQABAAAAAAAiAA8AAQABAAAAAAAiABAAAQABAAAAAAAiABEAAQABAAAAAAAiABIAAQABAAAAAAAiABMAAQABAAAAAAAiABQAAQABAAAAAAAiABUAAQABAAAAAAAiABYAAQABAAAAAAAiABcAAQABAAAAAAAiABgAAQABAAAAAAAiABkAAQABAAAAAAAiABoAAQABAAAAAAAiABsAAQABAAAAAAAiABwAAQABAAAAAAAiAB0AAQABAAAAAAAiAB4AAQABAAAAAAAKAAAAAQABAAAAAAAKAAEAAQABAAAAAAAKAAIAAQABAAAAAAAKAAMAAQABAAAAAAAKAAQAAQABAAAAAAAKAAUAAQABAAAAAAAKAAYAAQABAAAAAAAKAAcAAQABAAAAAAAKAAgAAQABAAAAAAAKAAkAAQABAAAAAAAKAAoAAQABAAAAAAAKAAsAAQABAAAAAAAKAAwAAQABAAAAAAAKAA0AAQABAAAAAAAKAA4AAQABAAAAAAAKAA8AAQABAAAAAAAKABAAAQABAAAAAAAKABEAAQABAAAAAAAKABIAAQABAAAAAAAKABMAAQABAAAAAAAKABQAAQABAAAAAAAKABUAAQABAAAAAAAKABYAAQABAAAAAAAKABcAAQABAAAAAAAKABgAAQABAAAAAAAKABkAAQABAAAAAAAKABoAAQABAAAAAAAKABsAAQABAAAAAAAKABwAAQABAAAAAAAKAB0AAQABAAAAAAAKAB4AAQABAAAAAAATAAsAAQAAAAAAAAATABEAAQABAAAAAAA=")

[node name="MovingTetris" type="Node2D" parent="."]

[node name="Baker" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 7
script = ExtResource("5_u81cr")
tilemap_nodepath = NodePath("../LevelTileMapLayer")
metadata/_edit_lock_ = true

[node name="Labels" type="Node2D" parent="."]

[node name="LabelEnter" type="Label" parent="Labels"]
offset_left = 8.0
offset_top = 74.0
offset_right = 68.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vq3mt")
theme_override_font_sizes/font_size = 18
text = "ENTER"

[node name="LabelEsc" type="Label" parent="Labels"]
offset_left = 21.0
offset_top = 151.0
offset_right = 68.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vq3mt")
theme_override_font_sizes/font_size = 18
text = "ESC"

[node name="Labelstgame" type="Label" parent="Labels"]
offset_left = 16.0
offset_top = 98.0
offset_right = 60.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vq3mt")
theme_override_font_sizes/font_size = 18
text = "Start "

[node name="LabelMenu" type="Label" parent="Labels"]
offset_left = 13.0
offset_top = 175.0
offset_right = 70.0
offset_bottom = 197.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vq3mt")
theme_override_font_sizes/font_size = 18
text = "Menu"

[node name="LabelScore" type="Label" parent="Labels"]
offset_left = 377.0
offset_top = 61.0
offset_right = 438.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vq3mt")
theme_override_font_sizes/font_size = 18
text = " SCORE
 "

[node name="LabelScoreNum" type="Label" parent="Labels"]
offset_left = 380.0
offset_top = 82.0
offset_right = 441.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vq3mt")
theme_override_font_sizes/font_size = 18
text = "000000"

[node name="ExitArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
position = Vector2(234, 464)
shape = SubResource("RectangleShape2D_d4w6o")

[connection signal="body_entered" from="ExitArea" to="." method="_on_exit_area_body_entered"]
